--- a/TrashPickup/Views/Shared/_Layout.cshtml
+++ b/TrashPickup/Views/Shared/_Layout.cshtml
@@ -24,6 +24,11 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
+                    <li>@Html.ActionLink("PickUp", "PickUp", "Customer")</li>
+                    <li>@Html.ActionLink("Billing", "Billing", "Customer")</li>
+                    <li>@Html.ActionLink("Map Route", "Map Route", "Employee")</li>
+                    <li>@Html.ActionLink("Customer Zip", "Customer Zip", "Employee")</li>
+
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
