--- a/TrashPickup/Views/Home/CustomerZip.cshtml
+++ b/TrashPickup/Views/Home/CustomerZip.cshtml
@@ -1,7 +1,21 @@
 ﻿
 @{
     ViewBag.Title = "CustomerZip";
+    ViewBag.Message = "Please Enter The Zip Code That You Are Looking For."
 }
 
-<h2>CustomerZip</h2>
+ <h2>@ViewBag.Title.</h2>
+<h3>@ViewBag.Message</h3>
+
+<address>
+    One Microsoft Way<br />
+    Redmond, WA 98052-6399<br />
+    <abbr title="Phone">P:</abbr>
+    425.555.0100
+</address>
+
+<address>
+    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
+    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+</address>
 
