--- a/TrashPickup/Views/Account/Address.cshtml
+++ b/TrashPickup/Views/Account/Address.cshtml
@@ -1,4 +1,4 @@
-﻿g
+﻿
 @{
     Layout = null;
 }
@@ -8,7 +8,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width" />
-    <title>CheckCustomerZip</title>
+    <title>Address</title>
 </head>
 <body>
     <div> 
