Added RemoveAddress to the Customer Controller and  Display to the Address Model

--- a/TrashPickup/Views/Customer/AddAddress.cshtml
+++ b/TrashPickup/Views/Customer/AddAddress.cshtml
@@ -1,6 +1,6 @@
 ﻿@model TrashPickup.Models.Address
 @{
-    
+
 }
 
 <!DOCTYPE html>
@@ -11,7 +11,7 @@
     <title>AddAddress</title>
 </head>
 <body>
-    using (Html.BeginForm())
+    @using (Html.BeginForm())
     {
     @Html.AntiForgeryToken()
 
