--- a/TrashPickup/Views/Customer/PickUp.cshtml
+++ b/TrashPickup/Views/Customer/PickUp.cshtml
@@ -1,26 +1,33 @@
 ﻿@model List<TrashPickup.Models.Address>
 @{
     ViewBag.Title = "Pick Ups";
-
- <h2>@ViewBag.Title.</h2>
- @Html.ActionLink("Add Pick Up", "AddAddress", "Customer")
-    @if(Model.Count > 0)
+}
+    <h2>@ViewBag.Title.</h2>
+    @Html.ActionLink("Add Pick Up", "AddAddress", "Customer")
+    @if (Model.Count > 0)
     {
-        //open table
-        @foreach(TrashPickup.Models.Address address in Model)
-        {
-            <tr>
-                <td>
-                    @address.AddressLine @address.City, @address.State @address.Zip Pick up: @address.Day
-                    @Html.ActionLink("Remove Address", "RemoveAddress", "Customer", new {AddressId = address.ID}, null)
-                    @Html.ActionLink("Change Pick Up Day", "ChangeDay", "Customer", new { AddressId = address.ID }, null)
-                </td>
-            </tr>
-        }
-        //close table
-    }
-    else
-    {
-        <p> No address found,  please enter an address</p>
-    }
+        <table class="table table-bordered table-hover">
+            <thead>
+                <tr>
+                    <th>Pick Up</th>
+                </tr>
+            </thead>
+            <tbody>
+                @foreach (TrashPickup.Models.Address address in Model)
+                {
+                    <tr>
+                        <td>
+                            @address.AddressLine  @address.City,  @address.State  @address.Zip <br/><b>Pick up: @address.Day</b><br/>
+                            @Html.ActionLink("Remove Address", "RemoveAddress", "Customer", new { AddressId = address.ID }, null)<br/>
+                            @Html.ActionLink("Change Pick Up Day", "ChangeDay", "Customer", new { AddressId = address.ID }, null)
+                        </td>
+                    </tr>
+                }
+                </tbody>
+            </table>
+                }
+                else
+                {
+                <p> No address found,  please enter an address</p>
+                }
 
