--- a/TrashPickup/Views/Customer/ChangeDay.cshtml
+++ b/TrashPickup/Views/Customer/ChangeDay.cshtml
@@ -21,6 +21,13 @@
                 @Html.ValidationMessageFor(model => model.Day, "", new { @class = "text-danger" })
             </div>
         </div>       
+        <div class="form-group">
+            @Html.LabelFor(model => model.HoldStart, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.HoldStart, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.HoldStart, "", new { @class = "text-danger" })
+            </div>
+        </div>   
         @Html.HiddenFor(model => model.ID)
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
