Made changes to Identity Model, Added ChangeZip Model Changed Eployee layout

--- a/TrashPickup/Views/Shared/_EmployeeLayout.cshtml
+++ b/TrashPickup/Views/Shared/_EmployeeLayout.cshtml
@@ -25,8 +25,7 @@
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
-                    <li>@Html.ActionLink("Map Route", "Map Route", "Employee")</li>
-                    <li>@Html.ActionLink("Customer Zip", "Customer Zip", "Employee")</li>
+                    <li>@Html.ActionLink("Change Zip", "ChangeZip", "Employee")</li>
 
                 </ul>
                 @Html.Partial("_LoginPartial")
