--- a/TrashPickup/Views/Customer/Billing.cshtml
+++ b/TrashPickup/Views/Customer/Billing.cshtml
@@ -1,17 +1,25 @@
 ﻿
-@{
-    Layout = null;
-}
+ @using (Html.BeginForm())
+ {
+    @Html.AntiForgeryToken()
 
-<!DOCTYPE html>
-
-<html>
-<head>
-    <meta name="viewport" content="width=device-width" />
-    <title>Billing</title>
-</head>
-<body>
-    <div> 
+    <div class="form-horizontal">
+        <h4>Balance</h4>
+        <hr />
+        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+        <div class="form-group">
+            @Html.LabelFor(model => model.ID, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.ID, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.ID, "", new { @class = "text-danger" })
+            </div>
+        </div>
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10">
+                <input type="submit" value="Add Address" class="btn btn-default" />
+            </div>
+        </div>
     </div>
+ }
 </body>
 </html>
