--- a/TrashPickup/Views/Employee/ChangeZip.cshtml
+++ b/TrashPickup/Views/Employee/ChangeZip.cshtml
@@ -1,8 +1,4 @@
 ﻿@model TrashPickup.Models.ApplicationUser
-@{
-    Layout = null;
-}
-
 <!DOCTYPE html>
 
 <html>
@@ -16,11 +12,10 @@
         @Html.AntiForgeryToken()
 
         <div class="form-horizontal">
-            <h4>UpDate Days For Trash Pick Up</h4>
+            <h4>Update Zip</h4>
             <hr />
             @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-            <div class="form-group">
-                @Html.LabelFor(model => model.ZipCode, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="form-group">                
                 <div class="col-md-10">
                     @Html.LabelFor(model => model.ZipCode, htmlAttributes: new { @class = "control-label col-md-2" })
                     @Html.EditorFor(model => model.ZipCode, new { htmlAttributes = new { @class = "form-control" } })
