--- a/TrashPickup/Views/Shared/_EmployeeLayout.cshtml
+++ b/TrashPickup/Views/Shared/_EmployeeLayout.cshtml
@@ -23,7 +23,7 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
+                    <li>@Html.ActionLink("Pick Up", "ShowAddress", "Employee")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                     <li>@Html.ActionLink("Change Zip", "ChangeZip", "Employee")</li>
 
